syntax = "proto3";

option csharp_namespace = "API_Gateway.Controllers";

package generalProtos;

message pBoolReply{
	bool result = 1;
}

message pTicket{
	int32 id = 1;
	int32 ticketnr = 2;
	string topic = 3;
	string name = 4;
	string firstname = 5;
	string email = 6;
	string priority = 7;
	string text = 8;
	int32 supporterid = 9;
}

enum pPriority{
	NON_VALUE = 0;
	SEHR_NIEDRIG = 1;
	NIEDRIG = 2;
	MITTEL = 3;
	HOCH = 4;
	SEHR_HOCH = 5;
}