syntax = "proto3";

option csharp_namespace = "Service.Protos";

package kunde;

import "Protos/GeneralProtos.proto";

service KundenVerwaltungsService{
	rpc AddKunde(pAddKundeRequest) returns (generalProtos.pBoolReply);
	rpc DeleteKunde(pDeleteKundeRequest) returns (generalProtos.pBoolReply);
}

message pAddKundeRequest{
	generalProtos.pKunde kunde = 1;
}

message pDeleteKundeRequest{
	int32 id = 1;
}